--- a/pages/goodnews/goodnews.wxml
+++ b/pages/goodnews/goodnews.wxml
@@ -1,2 +1,159 @@
 <!--pages/goodnews/goodnews.wxml-->
-<text>pages/goodnews/goodnews.wxml</text>
+<!-- 隐藏部分 -->
+<!-- catchtouchmove="preventTouchMove"  -->
+<view class="{{show?'zbg':'zbg1'}}" catchtouchmove='true'>
+  <view class="{{show? 'tbgshow':'tbg'}}">
+    <view class='box'>
+      <image src='{{goods.productimages[0].source}}' mode='aspectFit'></image>
+      <view class='cancel' bindtap='hideAttrPicker'>X</view>
+      <view class='goodxx'>
+        <view class='t1'>¥ {{price1}}</view>
+        <view class='t2'>库存 {{stock1}} 件</view>
+        <view class='t3'>选择的是:{{attrname1}}</view>
+      </view>
+      <view class='box1'>
+        <scroll-view scroll-y="true" class='gd'>
+          <view class='box2' wx:for="{{attr_group_list}}" wx:for-item="attr_group" wx:key="">
+            <view class='bt'>{{attr_group.attr_group_name}}</view>
+            <view class="{{item.checked?'bbhover':'bb'}}" wx:key="" wx:for="{{attr_group.attr_list}}" bindtap='attrClick' data-group-id="{{attr_group.attr_group_id}}" data-id="{{item.attr_id}}">
+              <!-- <text class='t1' data-group-id="{{attr_group.attr_group_id}}" data-id="{{item.attr_id}} "bindtap='attrClick'>{{item.attr_name}}</text> -->
+              {{item.attr_name}}
+              <!-- <text class='t2'>xxx</text> -->
+            </view>
+
+          </view>
+
+          <view class='box3'>
+            <view class='ts'>购买数量</view>
+            <view class='shu'>
+              <view class="{{number<=1?'ding':''}}" bindtap="numberSub">-</view>
+              <view class='input'>
+                <input bindblur='numberBlur' data-stock='{{stock1}}' value='{{number}}'></input>
+              </view>
+              <view class="{{number>=stock?'ding':''}}" bindtap="numberAdd" data-stock="{{stock}}">+</view>
+            </view>
+          </view>
+        </scroll-view>
+      </view>
+    </view>
+    <block wx:if="{{gwc==0}}">
+      <view class="{{show?'btnsshow':'btns'}}">
+        <view class='btn11' bindtap='addcart' data-gwc="0" data-cbuy="0">加入购物车</view>
+        <view class='btn21' bindtap="buynow" data-gwc="0" data-cbuy="1">立即购买</view>
+      </view>
+    </block>
+    <block wx:if="{{gwc==1}}">
+      <view class="{{show?'btnsshow':'btns'}}">
+        <block wx:if="{{cbuy!=1}}">
+          <view class='btn110' bindtap="addcart" data-gwc="1" data-cbuy="0">确定</view>
+        </block>
+        <block wx:if="{{cbuy=='1'}}">
+          <view class='btn110' bindtap="buynow" data-gwc="1" data-cbuy="1">确定</view>
+        </block>
+      </view>
+    </block>
+  </view>
+</view>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- 中间部分 -->
+<view>
+  <view>
+    <swiper class="img" autoplay="true" interval="5000" duration="1000" indicator-dots="true" circular="true" skip-hidden-item-layout='true'>
+      <block wx:for="{{goods.productimages}}" wx:key="source">
+        <swiper-item>
+          <image bindtap="onGoodsImageClick" data-index="{{index}}" class="goods-image" src="{{item.source}}" lazy-load='true'></image>
+        </swiper-item>
+      </block>
+    </swiper>
+
+    <view class='jbxx' style='clear:both'>
+      <view style='width:80%;float:left'>
+        <view>
+          <text class='xj'>¥ {{price}}</text>
+          <text class='yj' style='text-decoration:line-through'>价格¥{{marketPrice}}</text>
+        </view>
+        <view>
+          <text class='xx'>{{name}}</text>
+        </view>
+        <view>
+          <text class='kd'>快递:免运费</text>
+        </view>
+      </view>
+
+      <view style='width:20%;float:right'>
+        <view class='share-btn'>
+          <image src='/img/icon-share.png'></image>
+          <text class='fx'>分享</text>
+        </view>
+      </view>
+
+    </view>
+    <view class='ggxz' bindtap='addcart' data-gwc="0">
+      <view class='xz'>选择</view>
+      <view class='gg' wx:if="{{attrname1==null}}">规格</view>
+      <view class='gg' wx:if="{{attrname1!=''}}">{{attrname1}}</view>
+      <view class='jt'>
+        <image src='/img/icon-jiantou-r.png' mode='aspectFit'></image>
+      </view>
+    </view>
+
+
+
+
+
+
+    <view class='xxxx'>
+      <view class="swiper-tab">
+        <view class="swiper-tab-list {{currentTab==0 ? 'on' : ''}}" data-current="0" bindtap="swichNav">商品详情</view>
+        <view class="swiper-tab-list {{currentTab==1 ? 'on' : ''}}" data-current="1" bindtap="swichNav">评价</view>
+
+      </view>
+
+      <swiper current="{{currentTab}}" class="swiper-box" duration="300" style="height:{{winHeight - 31}}px" bindchange="bindChange">
+
+        <swiper-item>
+          <view>商品详情</view>
+        </swiper-item>
+
+        <swiper-item>
+          <view>评价</view>
+        </swiper-item>
+
+      </swiper>
+
+    </view>
+
+
+
+
+  </view>
+</view>
+
+<view class="jiesuan-box">
+  <view class='btns1'>
+    <view class="btn">
+      <image src='/img/x1.png'></image> 收藏</view>
+    <view class="btn">
+      <image src='/img/x2.png'></image> 收藏</view>
+    <view class="btn">
+      <image src='/img/x3.png'></image> 收藏</view>
+  </view>
+  <view class='btns2'>
+    <view class='btn1' bindtap='addcart' data-gwc="1" data-cbuy="0">加入购物车</view>
+    <view class='btn2' bindtap="buynow" data-gwc="1" data-cbuy="1">立即购买</view>
+  </view>
+</view>
