--- a/pages/goodnews/goodnews.wxss
+++ b/pages/goodnews/goodnews.wxss
@@ -1,1 +1,485 @@
 /* pages/goodnews/goodnews.wxss */
+
+page {
+  min-height: 100%;
+  background-color: #f0f3fc;
+}
+
+view {
+  overflow: visible;
+}
+
+.no-scroll {
+  height: 100%;
+  overflow-y: hidden;
+}
+
+.img {
+  background-color: #fff;
+  width: 100%;
+  height: 700rpx;
+}
+
+.img image {
+  width: 100%;
+  height: 100%;
+}
+
+.btnfx {
+  width: 100%;
+  height: 200rpx;
+  background-color: #feb351;
+}
+
+.jbxx {
+  height: 180rpx;
+  width: 100%;
+  background-color: #fff;
+  position: relative;
+}
+
+.share-btn {
+  border: none;
+  background: none;
+  border-radius: 0;
+  box-shadow: none;
+  display: inline-block;
+  font-size: 8pt;
+  width: 100%;
+  margin-top: 50rpx;
+}
+
+.share-btn image {
+  width: 30rpx;
+  height: 30rpx;
+  margin: 0 auto;
+  display: block;
+}
+
+.share-btn .fx {
+  font-size: 25rpx;
+  display: block;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.jbxx text {
+  margin-left: 20rpx;
+}
+
+.jbxx .xj {
+  color: #ff4d00;
+  font-size: 50rpx;
+}
+
+.jbxx .xx {
+  font-size: 25rpx;
+  display: -webkit-box;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  word-wrap: break-word;
+  white-space: normal !important;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  color: black;
+}
+
+.jbxx .yj {
+  font-size: 25rpx;
+}
+
+.jbxx .kd {
+  font-size: 25rpx;
+  position: absolute;
+  bottom: 10rpx;
+}
+
+.ggxz {
+  margin: 15rpx 0;
+  background-color: #fff;
+  height: 100rpx;
+  width: 100%;
+  clear: both;
+}
+
+.xz {
+  line-height: 100rpx;
+  margin-left: 20rpx;
+  font-size: 25rpx;
+  float: left;
+}
+
+.gg {
+  line-height: 100rpx;
+  margin-left: 20rpx;
+  font-size: 25rpx;
+  float: left;
+  display: -webkit-box;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  word-wrap: break-word;
+  white-space: normal !important;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  color: black;
+}
+
+.jt image {
+  display: block;
+  float: right;
+  width: 30rpx;
+  height: 30rpx;
+  margin-right: 20rpx;
+  margin-top: 35rpx;
+}
+
+/* 下面底部 */
+
+.jiesuan-box {
+  z-index: 100;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 100rpx;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  border-bottom: 1px solid #eee;
+  border-top: 1px solid #eee;
+  background-color: #fff;
+}
+
+.jiesuan-box .btns1 {
+  width: 40%;
+  font-size: 20rpx;
+  text-align: center;
+  /* background-color: green; */
+}
+
+.jiesuan-box .btns1 .btn {
+  margin-top: 20rpx;
+  float: left;
+  width: 33%;
+}
+
+.jiesuan-box .btns2 {
+  width: 60%;
+  text-align: center;
+  color: white;
+  font-size: 30rpx;
+}
+
+.jiesuan-box .btns2 .btn1 {
+  float: left;
+  width: 50%;
+  line-height: 100rpx;
+  background-color: #feb351;
+}
+
+.jiesuan-box .btns1 .btn image {
+  width: 40rpx;
+  height: 40rpx;
+  margin: 0 auto;
+  display: block;
+}
+
+.jiesuan-box .btns2 .btn2 {
+  float: left;
+  width: 50%;
+  line-height: 100rpx;
+  background-color: #e43e2e;
+}
+
+.swiper-tab {
+  width: 100%;
+  border-bottom: 2rpx solid #777;
+  text-align: center;
+  line-height: 80rpx;
+  background-color: white;
+}
+
+.swiper-tab-list {
+  font-size: 30rpx;
+  display: inline-block;
+  width: 50%;
+  color: #777;
+  background-color: white;
+}
+
+.on {
+  color: #ff4d00;
+  border-bottom: 3rpx solid #ff4d00;
+}
+
+.swiper-box {
+  display: block;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  background-color: white;
+  z-index: 50;
+}
+
+.swiper-box view {
+  text-align: center;
+  background-color: white;
+}
+
+/* 加入购物车的页面跳出的页面 */
+
+.zbg1 {
+  width: 0;
+  height: 0;
+  z-index: 200;
+}
+
+.zbg {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  position: fixed;
+  z-index: 200;
+}
+
+/* .mask-con{
+transition: 1s; 
+position: fixed;
+width: 100%;
+height: 900rpx;
+left: 0;
+bottom: -900rpx;
+ 
+text-align: center;
+line-height: 300rpx;
+box-shadow: 0 1px 10px #aaa;
+}
+
+.mask-con-show{
+bottom: 0;
+} */
+
+.tbg {
+  box-shadow: 0 1px 10px #aaa;
+  width: 100%;
+  height: 80rpx;
+  left: 0;
+  background-color: white;
+  bottom: -1100rpx;
+  position: fixed;
+  transition: 0.8s;
+  z-index: 200;
+}
+
+.tbgshow {
+  width: 100%;
+  height: 800rpx;
+  background-color: white;
+  bottom: 0rpx;
+  position: fixed;
+  transition: 0.8s;
+  z-index: 200;
+}
+
+.box image {
+  width: 200rpx;
+  height: 200rpx;
+  background-color: white;
+  position: absolute;
+  margin-top: -80rpx;
+  margin-left: 30rpx;
+  border: 1rpx solid #ddd;
+  border-radius: 10rpx;
+  padding: 5rpx;
+}
+
+.goodxx {
+  font-size: 25rpx;
+  position: absolute;
+  margin-left: 250rpx;
+  margin-top: 20rpx;
+  width: 55%;
+}
+
+.goodxx .t1 {
+  color: orange;
+  font-size: 35rpx;
+}
+
+.goodxx .t3 {
+  color: black;
+  display: -webkit-box;
+  width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  word-wrap: break-word;
+  white-space: normal !important;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+}
+
+.box1 {
+  /* background-color: greenyellow; */
+  position: fixed;
+  border-top: 1rpx solid #f1f1f1;
+  box-shadow: 0 0 10rpx #fefefe inset;
+  width: 95%;
+  font-size: 30rpx;
+  margin: 150rpx 20rpx;
+}
+
+.box2 .bt {
+  margin: 10rpx 25rpx;
+  width: 100%;
+  float: left;
+}
+
+.box2 .bb {
+  background-color: #f6f6f6;
+  height: 50rpx;
+  float: left;
+  margin: 10rpx 15rpx;
+  border-radius: 10rpx;
+  line-height: 50rpx;
+  color: #000;
+  padding: 10rpx;
+}
+
+.box2 .bbhover {
+  background-color: #fffaf9;
+  height: 50rpx;
+  padding: 10rpx;
+  float: left;
+  margin: 10rpx 15rpx;
+  border-radius: 10rpx;
+  line-height: 50rpx;
+  color: #f44700;
+  border: 1rpx solid #f44700;
+}
+
+/* .box2 .bb .t2 {
+  margin: 0 10rpx;
+  float: right;
+} */
+
+.gd {
+  /* background-color: gold; */
+  height: 600rpx;
+}
+
+.box2 {
+  overflow: hidden;
+  border-bottom: 1rpx solid #f1f1f1;
+}
+
+.box3 {
+  width: 100%;
+  /* background-color: cornsilk; */
+  overflow: hidden;
+  height: 80rpx;
+}
+
+.box3 .ts {
+  line-height: 80rpx;
+  float: left;
+  margin: 0 20rpx;
+}
+
+.box3 .shu {
+  line-height: 60rpx;
+  float: right;
+  display: block;
+  margin: 10rpx;
+}
+
+.box3 .shu view {
+  float: left;
+  text-align: center;
+  width: 60rpx;
+  background-color: #f6f6f6;
+  margin: 0 5rpx;
+}
+
+.ding {
+  background-color: #fefefe;
+  color: #ccc;
+}
+
+.box3 .shu input {
+  height: 60rpx;
+  color: #000;
+}
+
+.btns {
+  position: fixed;
+  bottom: -1000rpx;
+  width: 100%;
+  height: 75rpx;
+  /* background-color: greenyellow; */
+  color: white;
+  padding: 15rpx;
+  font-size: 35rpx;
+  transition: 0.8s;
+}
+
+.btnsshow {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 75rpx;
+  /* background-color: greenyellow; */
+  color: white;
+  padding: 15rpx;
+  font-size: 35rpx;
+  transition: 0.8s;
+}
+
+.btn11 {
+  float: left;
+  width: 46%;
+  line-height: 75rpx;
+  text-align: center;
+  background: linear-gradient(to right, #fccc0f, #fa9704);
+  border-radius: 50rpx 0 0 50rpx;
+  margin: 0 0 0 20rpx;
+}
+
+.btn110 {
+  float: left;
+  width: 96%;
+  line-height: 75rpx;
+  text-align: center;
+  background: linear-gradient(to right, #fccc0f, #fa9704, #fccc0f);
+  border-radius: 50rpx;
+  margin: 0 auto;
+}
+
+.btn21 {
+  float: left;
+  width: 46%;
+  line-height: 75rpx;
+  text-align: center;
+  background: linear-gradient(to right, #fe7905, #fe4b03);
+  border-radius: 0 50rpx 50rpx 0;
+  margin: 0 20rpx 0 0;
+}
+
+.bodyLock {
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  position: fixed;
+}
+
+.cancel {
+  float: right;
+  height: 50rpx;
+  width: 50rpx;
+  margin-right: 30rpx;
+  margin-top: 20rpx;
+  text-align: center;
+  line-height: 50rpx;
+  border: 1rpx solid rgb(197, 197, 197);
+  border-radius: 50%;
+}
