--- a/pages/select/select.wxss
+++ b/pages/select/select.wxss
@@ -71,7 +71,8 @@ font-size: 26rpx;
 }
 .body-list{
   box-sizing: border-box;
-  background-color: #F2F2F2;
+  background-color: #f0f3fc;
+  border-radius: 30rpx;
   /* background-color: #dddddd; */
   border: 1px solid #ECECEC;
   font-size: 26rpx;
@@ -81,7 +82,6 @@ font-size: 26rpx;
   margin-left: 38rpx;
   display: inline-block;
   padding: 20rpx 30rpx;
-  border-radius: 12rpx;
   color: #555555;
   z-index: 100
 }
